# React-FastAPI_E-Commerce_App

./: .gitignore  FLOWS.md  ORDER_CREATION_FLOW.md  PRODUCTION_CHECKLIST.md  README.md  backend_architecture.excalidraw  package-lock.json
backend/api-gateway/: Dockerfile  apigateway.py  config.py  exceptions.py  main.py  pyproject.toml
backend/api-gateway/dependencies/: auth_dependencies.py
backend/api-gateway/events/: publisher.py
backend/api-gateway/middleware/: auth_middleware.py
backend/api-gateway/routes/: admin_routes.py  product_routes.py  user_routes.py
backend/api-gateway/schemas/: schemas.py
backend/api-gateway/utils/: cache_response.py  rate_limiter.py
backend/api_gateway/: .dockerignore  Dockerfile  apigateway.py  exceptions.py  main.py  pyproject.toml
backend/api_gateway/dependencies/: auth_dependencies.py
backend/api_gateway/gateway/: apigateway.py  cache_policy.py
backend/api_gateway/middleware/: auth_middleware.py  cache_middleware.py
backend/api_gateway/routes/: cart_routes.py  notification_routes.py  order_routes.py  payment_routes.py  product_routes.py  shipping_routes.py  supplier_routes.py  user_routes.py  wishlist_routes.py
backend/api_gateway/schemas/: schemas.py
backend/api_gateway/tests/: conftest.py  constants.py
backend/notification-consumer/: Dockerfile  main.py  pyproject.toml
backend/notification-consumer/events/: consumer.py
backend/notification-service/: Dockerfile  Dockerfile.consumer  README.md  main.py  notification_models.py  pyproject.toml
backend/notification-service/alembic/: env.py
backend/notification-service/events/: consumer.py
backend/notification-service/exceptions/: notification_exceptions.py
backend/notification-service/models/: notification_models.py
backend/notification-service/routes/: notification_routes.py
backend/notification-service/schemas/: notifications_schemas.py
backend/notification-service/service_layer/: email_service.py
backend/notification-service/templates/: password_reset_confirmation.html
backend/notification_service/: .dockerignore  Dockerfile  Dockerfile.consumer  Dockerfile.worker  main.py  pyproject.toml
backend/notification_service/database_layer/: notification_repository.py
backend/notification_service/dependencies/: dependencies.py
backend/notification_service/events_consumer/: app.py  event_handlers.py  notification_events_consumer.py
backend/notification_service/exceptions/: notification_exceptions.py
backend/notification_service/helpers/: request_helper.py
backend/notification_service/models/: notification_models.py
backend/notification_service/routes/: notification_routes.py
backend/notification_service/service_layer/: notification_service.py
backend/notification_service/tasks/: broker.py  email_tasks.py
backend/notification_service/tests/: conftest.py  constants.py
backend/order_service/: Dockerfile  Dockerfile.consumer  main.py  pyproject.toml
backend/order_service/database_layer/: order_address_repository.py  order_item_repository.py  order_repository.py  outbox_repository.py
backend/order_service/dependencies/: dependencies.py
backend/order_service/events_consumer/: app.py  order_event_consumer.py
backend/order_service/events_publisher/: order_event_publisher.py
backend/order_service/exceptions/: order_exceptions.py  outbox_event_exceptions.py
backend/order_service/helpers/: request_helper.py
backend/order_service/models/: order_address_models.py  order_item_models.py  order_models.py  outbox_events.py
backend/order_service/routes/: orders_routes.py
backend/order_service/schemas/: order_schemas.py
backend/order_service/service_layer/: order_address_service.py  order_item_service.py  order_service.py  outbox_event_service.py  outbox_poller_service.py
backend/order_service/tests/: conftest.py  constants.py
backend/payment_service/: Dockerfile  Dockerfile.consumer  alembic.ini  main.py  pyproject.toml
backend/payment_service/alembic/: env.py
backend/payment_service/database_layer/: payment_repository.py
backend/payment_service/dependencies/: dependencies.py
backend/payment_service/events_consumer/: app.py  payment_event_consumer.py
backend/payment_service/events_publisher/: payment_event_publisher.py
backend/payment_service/exceptions/: outbox_event_exceptions.py  payment_exceptions.py
backend/payment_service/helpers/: request_helper.py
backend/payment_service/models/: payment_models.py
backend/payment_service/routes/: payment_routes.py
backend/payment_service/service_layer/: outbox_event_service.py  outbox_poller_service.py  payment_service.py
backend/payment_service/tests/: conftest.py  constants.py
backend/product_service/: Dockerfile  Dockerfile.consumer  Dockerfile.worker  entrypoint-worker.sh  main.py  pyproject.toml
backend/product_service/alembic/: env.py
backend/product_service/database_layer/: category_repository.py  product_image_repository.py  product_repository.py  product_variant_repository.py  review_repository.py
backend/product_service/dependencies/: dependencies.py
backend/product_service/event_consumer/: app.py  event_consumer.py  product_event_consumer.py
backend/product_service/event_publisher/: event_publisher.py
backend/product_service/exceptions/: category_exceptions.py  image_generation_exceptions.py  product_exceptions.py  product_image_exceptions.py  review_exceptions.py
backend/product_service/helpers/: request_helper.py  user_context_resolver.py
backend/product_service/models/: __init__.py  (+5 more)
backend/shared/: =0.27.0  authentication.py  base_exceptions.py  customized_json_response.py  database_layer.py  database_setup.py  email_service.py  event_publisher.py  filter_parser.py  idempotency_service.py  logger_config.py  metaclasses.py  models_mixins.py  pyproject.toml  redis_manager.py  settings.py  shared_instances.py  telemetry.py  token_manager.py
backend/shipping_service/: .dockerignore  Dockerfile  Dockerfile.consumer  alembic.ini  main.py  pyproject.toml
backend/user_service/: .dockerignore  Dockerfile  main.py  pyproject.toml
(+683 files in other folders)
