[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "gunicorn>=23.0.0",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
    "circuitbreaker>=2.1.3",
    "redis>=6.2.0",
]
