[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "gunicorn>=23.0.0",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
    "circuitbreaker>=2.1.3",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "orjson>=3.11.1",
    "faststream[rabbit]>=0.5.48",
    "pydantic[email]>=2.11.7",
    "asyncpg>=0.30.0",
    "fastapi-mail>=1.5.0",
]
