[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "python-json-logger>=3.2.0",
    "httpx>=0.28.1",
    "gunicorn>=23.0.0",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
    "circuitbreaker>=2.1.3",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "orjson>=3.11.1",
    "faststream[cli,rabbit]>=0.5.48",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic[email]>=2.11.7",
    "asyncpg>=0.30.0",
    "fastapi-mail>=1.5.0",
    "python-multipart>=0.0.20",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = [".", ".."]
testpaths = ["tests"]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pyright]
extraPaths = [".."]
