[project]
name = "notification-service"
version = "0.1.0"
description = "Notification service for E-commerce application"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "faststream[cli,rabbit,rabbitmq]>=0.5.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "gunicorn>=23.0.0",
]
# readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S104", "S105", "S106", "S107", "S113", "S311", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
