[project]
name = "notification-service"
version = "0.1.0"
description = "Notification service for E-commerce application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "gunicorn>=23.0.0",
    "orjson>=3.11.3",
    "redis>=6.4.0",
    "fastapi-mail>=1.5.0",
    "asyncpg>=0.30.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "alembic>=1.17.1",
    "faststream[cli,rabbit]>=0.6.5",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pyright]
extraPaths = [".."]
