[project]
name = "payment-service"
version = "0.1.0"
description = "Stripe payment processing microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "python-json-logger>=3.2.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.136.3",
    "fastapi-mail>=1.5.0",
    "faststream[cli,rabbit]>=0.6.5",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "orjson>=3.11.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "stripe>=15.0.1",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
]


[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = [".", ".."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
]

[tool.basedpyright]
extraPaths = [".."]
