[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "fastapi-mail>=1.5.0",
    "faststream[cli,rabbit]>=0.5.48",
    "orjson>=3.11.1",
    "python-json-logger>=3.2.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "redis>=6.2.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.45",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-redis>=1.1.2",
    "pydantic>=2.13.4",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pyright]
extraPaths = [".."]
