[project]
name = "shipping-service"
version = "0.1.0"
description = "E-Commerce Shipping Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache==0.12.3",
    "python-json-logger>=3.2.0",
    "aiofiles>=25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.11",
    "aiosignal==1.3.2",
    "aiosmtplib==3.0.2",
    "alembic>=1.17.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "bcrypt==4.0.1",
    "blinker==1.9.0",
    "cffi==1.17.1",
    "click==8.2.1",
    "cryptography==45.0.4",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "fastapi==0.136.3",
    "fastapi-mail==1.5.0",
    "faststream[cli,rabbit]>=0.6.5",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "multidict==6.4.4",
    "orjson>=3.11.1",
    "packaging==25.0",
    "passlib==1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "propcache==0.3.2",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.2",
    "uvicorn==0.34.3",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "yarl==1.20.1",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pyright]
extraPaths = [".."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = [".", ".."]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]

[dependency-groups]
dev = [
    "greenlet>=3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
